--- a/src/gui/LoginWindow.fxml
+++ b/src/gui/LoginWindow.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
+<?import java.lang.*?>
 <?import javafx.scene.effect.*?>
-<?import javafx.scene.canvas.*?>
-<?import javafx.scene.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 
 <VBox nodeOrientation="RIGHT_TO_LEFT" prefHeight="206.0" prefWidth="503.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LoginController">
    <children>
@@ -51,7 +44,7 @@
                   <Glow level="0.65" />
                </effect>
             </Label>
-            <TextField fx:id="txtUserName" prefWidth="200.0" />
+            <TextField fx:id="txtUserName" prefHeight="25.0" prefWidth="208.0" />
          </children>
          <padding>
             <Insets bottom="3.0" left="10.0" right="10.0" top="10.0" />
@@ -67,7 +60,7 @@
                   <Glow level="0.56" />
                </effect>
             </Label>
-            <PasswordField fx:id="txtPassword" alignment="CENTER" prefWidth="200.0" />
+            <PasswordField fx:id="txtPassword" alignment="CENTER" prefHeight="25.0" prefWidth="207.0" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="3.0" />
@@ -75,8 +68,8 @@
       </HBox>
       <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
          <children>
-            <Button fx:id="btnLogin" mnemonicParsing="false" onAction="#btnLoginOnAction" text="تسجيل" />
-            <Button fx:id="btnExit" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="خروج" />
+            <Button mnemonicParsing="false" onAction="#btnLoginOnAction" text="تسجيل" />
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="خروج" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
